<resources>
    <string name="app_name">SavingsCalculator</string>
    <string name="main_app_logo_for_greeting">Main app logo for greeting</string>
    <string name="calculate_savings">Calculate Savings</string>
    <string name="check_goals">Check goals</string>
    <string name="set_goals">Set goals</string>
    <string name="tempimg">TempImg</string>

    <!-- Timeframes for spinners -->
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="yearly">Yearly</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="fourth_fragment_label">Fourth Fragment</string>
    <string name="a5_CarFragment">Car Fragment</string>
    <string name="a6_MotorbikeFragment">Motorbike Fragment</string>
    <string name="a7_TravelFragment">Travel Fragment</string>
    <string name="a8_InsuranceFragment">Insurance Fragment</string>
    <string name="a9_EducationFragment">Education Fragment</string>
    <string name="a10_LeisureFragment">Leisure Fragment</string>
    <string name="a11_EventFragment">Event Fragment</string>
    <string name="a12_SubsFragment">Subs Fragment</string>
    <string name="a13_FinalFragment">Final Fragment</string>
    <string name="a14_DetailsFragment">See details</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="details">See details</string>
    <string name="save">Save</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>

    <string name="wages_social_welfare">Wages / Social Welfare</string>
    <string name="value_for_wages">Value for wages</string>
    <string name="selection_for_time">Select period</string>
    <string name="title_activity_savings_calc_income">Savings Calc income</string>
    <string name="partner_s_wages_social_welfare">Partner\'s wages / social welfare</string>
    <string name="cbp">Child benefit payment</string>
    <string name="other_income">Other Income</string>
    <string name="allowance">Allowance / Pocket Money.</string>

    <!-- Expenses activity - Loans -->
    <string name="title_activity_expenses">Expenses Activity</string>
    <string name="expenses">Expenses</string>
    <string name="loans">Loans</string>
    <string name="holiday_loan">Holiday loan</string>
    <string name="education_tuition_loan">Education / Tuition loan</string>
    <string name="Euro">€</string>
    <string name="home_loan">Mortgage</string>
    <string name="personal_loan">Personal loan</string>
    <string name="business_loan">Business loan</string>
    <string name="car_motorbike_loan">Car / motorbike loan</string>
    <string name="credit_card_loan">Credit card loan</string>


    <string name="income">Income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_college_day">Work / College day</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="transport">Transport</string>
    <string name="other_daily_expenses">Other daily expenses</string>

    <string name="bills_amp_home_expenses"><![CDATA[Bills & Home expenses]]></string>
    <string name="broadband">Broadband</string>
    <string name="rent">Rent payments</string>
    <string name="electricity">Electricity</string>
    <string name="food">Groceries</string>
    <string name="gas">Gas / Oil</string>
    <string name="house">House maintenance</string>
    <string name="management">Management fees</string>
    <string name="oil">Oil</string>
    <string name="pets">Pets (food/care/insurance)</string>
    <string name="tv_license">TV licence</string>
    <string name="waste">Waste charges</string>
    <string name="property">Property tax</string>


    <string name="step_1_of_15">Step 1 of 15</string>
    <string name="step_2_of_15">Step 2 of 15</string>
    <string name="step_3_of_15">Step 3 of 15</string>
    <string name="step_4_of_15">Step 4 of 15</string>
    <string name="step_5_of_15">Step 5 of 15</string>
    <string name="step_6_of_15">Step 6 of 15</string>
    <string name="step_7_of_15">Step 7 of 15</string>
    <string name="step_8_of_15">Step 8 of 15</string>
    <string name="step_9_of_15">Step 9 of 15</string>
    <string name="step_10_of_15">Step 10 of 15</string>
    <string name="step_11_of_15">Step 11 of 15</string>
    <string name="step_12_of_15">Step 12 of 15</string>

    <!-- a5 frag-->
    <string name="car_costs">Car Costs</string>
    <string name="car_petrol">Petrol / Diesel </string>
    <string name="car_tax">Tax</string>
    <string name="car_maintenance">Maintenance</string>
    <string name="car_service">Service</string>
    <string name="car_parking">Parking</string>
    <string name="car_nct">NCT</string>

    <!-- a6 frag-->
    <string name="moto_costs">Motorbike Costs</string>
    <string name="moto_petrol">Petrol</string>
    <string name="moto_tax">Tax</string>
    <string name="moto_maintenance">Maintenance</string>
    <string name="moto_parts">New parts</string>
    <string name="moto_gear">Motorbike gear</string>

    <!-- a7 frag-->
    <string name="travel_costs">Travel Expenses</string>
    <string name="travel_ticket">Bus ticket</string>
    <string name="travel_taxi">Taxi</string>
    <string name="travel_bike">Bicycle rent</string>
    <string name="travel_bike_main">Bicycle maintenance</string>
    <string name="travel_other">Other travel costs</string>

    <!-- a8 frag-->
    <string name="insurance_costs">Insurance Expenses</string>
    <string name="insurance_car1">Car 1 insurance</string>
    <string name="insurance_car2">Car 2 insurance</string>
    <string name="insurance_motorbike1">Motorbike 1 insurance</string>
    <string name="insurance_motorbike2">Motorbike 2 insurance</string>
    <string name="insurance_health">Health insurance</string>
    <string name="insurance_travel">Travel insurance</string>
    <string name="insurance_home">Home insurance</string>
    <string name="insurance_life">Life insurance</string>
    <string name="insurance_mortgage">Mortgage insurance</string>

    <!-- a9 frag-->
    <string name="edu_costs">Education Costs</string>
    <string name="edu_tuition">Tuition</string>
    <string name="edu_fees">Fees</string>
    <string name="edu_books">Books</string>
    <string name="edu_equip">Equipment</string>
    <string name="edu_clothes">Clothes</string>

    <!-- a10 frag-->
    <string name="leisure_costs">Leisure Expenses</string>
    <string name="leisure_member">Membership</string>
    <string name="leisure_out">Nights out</string>
    <string name="leisure_cinema">Cinema</string>
    <string name="leisure_festival">Festivals</string>
    <string name="leisure_enter">Entertainment</string>
    <string name="leisure_alcohol">Alcohol</string>
    <string name="leisure_cigs">Cigarettes / Vapes</string>

    <!-- a11 frag-->
    <string name="event_costs">Event / Occasional Expenses</string>
    <string name="event_birth">Birthdays</string>
    <string name="event_hol">Holidays</string>
    <string name="event_house">Household supplies</string>
    <string name="event_fur">Furniture</string>
    <string name="event_med">Medical</string>
    <string name="event_wed">Weddings</string>
    <string name="event_clothes">Clothes</string>
    <string name="event_hair">Hairdressers</string>


    <!-- a12 frag-->
    <string name="subs_costs">Subscriptions and Services</string>
    <string name="subs_spot">Spotify</string>
    <string name="subs_net">Netflix</string>
    <string name="subs_hulu">Hulu</string>
    <string name="subs_prime">Amazon Prime</string>
    <string name="subs_disney">Disney+</string>
    <string name="subs_amazon">Amazon Music Unlimited</string>
    <string name="subs_apple">Apple Music</string>
    <string name="subs_pea">Peacock</string>
    <string name="subs_crunch">Crunchyroll</string>
    <string name="subs_chew">Chewy</string>
    <string name="subs_espn">ESPN+</string>
    <string name="subs_hbo">HBO Max</string>
    <string name="subs_other">Other</string>


    <!-- a13 frag -->
    <string name="your_results">Your results</string>
    <string name="main_str">Your results</string>
    <string name="total_income">Total income</string>
    <string name="total_expenses">Total expenses</string>
    <string name="you_could_save">You could save</string>
    <string name="income_vs_expenses" >Income Vs. Expenses</string>

    <string name="year_calc">€%1$s / year</string>
    <string name="savings_str">€%1$s</string>

    <string name="losing_savings">Income is lower than your spending</string>
    <string name="winning_savings">You could be saving</string>


    <string name="a14_Details" />
    <string name="detailed">Detailed Expenditure</string>

    <string name="total_income_saved">Total income</string>
    <string name="total_expenses_saved">Total expenses</string>

    <string name="total_expenses_saved_formatted">Your total income is: %1$s</string>
    <string name="total_income_saved_formatted">Your total expenses are: %1$s</string>
    <string name="total_income_over_expenses_formatted">You spent over %1$s of your income</string>

    <string name="least_spent_formatted">Least you have spent on %1$s: €%2$s</string>
    <string name="most_spent_formatted">Most you have spent on %1$s: €%2$s</string>
    <string name="you_currently_spend">You currently spend:</string>
    <string name="spent_over_of_your_income">% spent over of your income:</string>
    <string name="most_finance_spent_on">Most finance spent on:</string>
    <string name="least_you_have_spent_on">Least you have spent on:</string>
    <string name="your_current_income_is">Your current income is:</string>

    <string name="val">€%1$s / year</string>
    <string name="val1">%1$s €%2$s / year</string>
    <string name="top_5_categories_spent_on">Top 5 categories spent on:</string>


</resources>