<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="226dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="466dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/main_app_logo_for_greeting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="164dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="105dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.938">

        <Button
            android:id="@+id/calc_savings_activity_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_savings" />

        <Button
            android:id="@+id/check_goals_activity_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_goals" />

        <Button
            android:id="@+id/set_goals_activity_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_goals" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>