<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    tools:context=".calculatesavings.fragments.a13_Final">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/your_results"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="60sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/detailed"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <!--            <androidx.recyclerview.widget.RecyclerView-->
            <!--                android:id="@+id/top_5_RecyclerView"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="2dp"-->
            <!--                android:padding="35dp"-->
            <!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@+id/top_5_TV" />-->

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:id="@+id/your_current_income_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/your_current_income_is"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_current_income_Val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/your_current_expenses_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/you_currently_spend"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/your_current_expenses_Val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/you_spent_over_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/spent_over_of_your_income"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/you_spent_over_Val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/most_spent_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/most_finance_spent_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/most_spent_Val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/least_spent_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/least_you_have_spent_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/least_spent_Val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/top_5_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_5_categories_spent_on"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="28sp" />


            <TextView
                android:id="@+id/top_5_Val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>


