<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    tools:context=".calculatesavings.fragments.a13_Final">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/your_results"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="60sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/subs_costs"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:padding="35dp"
                android:stretchColumns="*"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="3">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_income"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalIncomeTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="TextView"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="3">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_expenses"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/design_default_color_error"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalExpensesTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="TextView"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="3">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/you_could_save"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/purple_500"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalSaveTV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="TextView"
                        android:textAlignment="textEnd" />
                </TableRow>

            </TableLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:padding="35dp"
                android:layout_margin="35dp"
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="400dp" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>